# crash-signatures

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
M_realloc_insert/: CMakeLists.txt  M_realloc_insert.cpp  README.md
_M_realloc_insert/: CMakeLists.txt  README.md  _M_realloc_insert.cpp
__cxa_finalize/: CMakeLists.txt  README.md  __cxa_finalize.cpp  dl1.cpp  dl2.cpp  dl3.cpp
__cxa_pure_virtual/: CMakeLists.txt  README.md  __cxa_pure_virtual-constructor.cpp  __cxa_pure_virtual-deleted.cpp  __cxa_pure_virtual-destructor.cpp  __cxa_pure_virtual.cpp
__run_exit_handlers/: CMakeLists.txt  README.md  __run_exit_handlers.cpp
__terminate/: CMakeLists.txt  README.md  __terminate-thread.cpp
address-sanitizer/: CMakeLists.txt  README.md  address-sanitizer.cpp
corrupt-stack/: CMakeLists.txt  README.md  corrupt-stack.cpp  dynamicloader.cpp  dynamicloader.h
corrupt-stack/sharedlibrary/: CMakeLists.txt  sharedlibrary.cpp  sharedlibrary.h
corrupted/: CMakeLists.txt  README.md  corrupted-gloop.cpp  corrupted-pthread.cpp  corrupted.cpp  dl-gloop.cpp  dl-pthread.cpp  dl4.cpp
destructed-twice/: CMakeLists.txt  README.md
destructed-twice/a/: CMakeLists.txt  a.cpp  a.h
destructed-twice/agent/: CMakeLists.txt  agent.cpp  agent.h  token.cpp  token.h
destructed-twice/app/: CMakeLists.txt  app.cpp
destructed-twice/b/: CMakeLists.txt  b.cpp  b.h
destructed-twice/lib/: CMakeLists.txt  lib.cpp  lib.h
double-free/: CMakeLists.txt  README.md  double-free-dl1.cpp  double-free-dl2.cpp  double-free-dl3.cpp  double-free-global.cpp
external-linkage/: CMakeLists.txt  README.md  dl5.cpp  dl6.cpp  external-linkage.cpp
global-qthread/: CMakeLists.txt  README.md  global-qthread.pro  logger.cpp  logger.h  main.cpp  signalhandler.cpp  signalhandler.h
globals-linkage/: CMakeLists.txt  README.md  dl5.cpp  dl5.h  dl6.cpp  dl6.h  error-code.h  globals-linkage.cpp
malloc/: README.md
missing-return-statement/: CMakeLists.txt  README.md  missing-return-statement.cpp
quit-gmain-loop/: CMakeLists.txt  README.md  dynloader.cpp  dynloader.h  plugin.cpp  plugin.h  pluginthread.cpp  pluginthread.h  quit-gmain-loop.cpp  service.cpp  service.h
race-condition/: CMakeLists.txt  README.md  race-condition-assignment.cpp
rfcapi-test/: CMakeLists.txt  README.md  rfcapi-test.cpp  rfcutils.cpp  rfcutils.h  textgen.cpp  textgen.h
segv_maperr/: CMakeLists.txt  README.md  segv_maperr.cpp
static-initialization-order/: CMakeLists.txt  README.md  static-initialization-order-on-exit.cpp
std-terminate/: README.md
terminate/: CMakeLists.txt  README.md  terminate-thread-detach.cpp  terminate-throw-noexcept.cpp  terminate-throw-stack-unwinding.cpp  terminate-throw.cpp
thread-terminate/: CMakeLists.txt  README.md  framework.c  plugin.c  pluginThread.cpp  thread-terminate.c
