cmake_minimum_required(VERSION 3.3)

project(crash-signatures)

option(__cxa_finalize "Include __cxa_finalize." ON)
option(corrupted "Include corrupted." ON)
option(__cxa_pure_virtual "Include __cxa_pure_virtual." ON)
option(missing-return-statement "Include missing-return-statement." ON)
option(__run_exit_handlers "Include __run_exit_handlers." ON)
option(_M_realloc_insert "Include _M_realloc_insert." ON)

if (__cxa_finalize)
    add_subdirectory(__cxa_finalize)
endif ()
if (corrupted)
    add_subdirectory(corrupted)
endif ()
if (__cxa_pure_virtual)
    add_subdirectory(__cxa_pure_virtual)
endif ()
if (missing-return-statement)
    add_subdirectory(missing-return-statement)
endif ()
if (__run_exit_handlers)
    add_subdirectory(__run_exit_handlers)
endif ()
if (_M_realloc_insert)
    add_subdirectory(_M_realloc_insert)
endif ()
