cmake_minimum_required(VERSION 3.3)

project(crash-signatures)

option(__cxa_pure_virtual "Include __cxa_pure_virtual." ON)
option(_M_realloc_insert "Include _M_realloc_insert." ON)
option(segv_maperr "Include segv_maperr." ON)
option(external-linkage "Include external-linkage." ON)
option(missing-return-statement "Include missing-return-statement." ON)
option(address-sanitizer "Include address-sanitizer." ON)

if (__cxa_pure_virtual)
    add_subdirectory(__cxa_pure_virtual)
endif ()
if (_M_realloc_insert)
    add_subdirectory(_M_realloc_insert)
endif ()
if (segv_maperr)
    add_subdirectory(segv_maperr)
endif ()
if (external-linkage)
    add_subdirectory(external-linkage)
endif ()
if (missing-return-statement)
    add_subdirectory(missing-return-statement)
endif ()
if (address-sanitizer)
    if (NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm")
        add_subdirectory(address-sanitizer)
    endif ()
endif ()
